--- a/style.css
+++ b/style.css
@@ -19,6 +19,10 @@
     align-items: center;
     justify-content: center;
   }
+  .disabled {
+    pointer-events: none;
+    opacity: 0.5; 
+  }
   
   @media (max-width: 1025px) {
     .search-section {
