added a meta tag on the head for fix issues with showing pictures in deployed

--- a/style.css
+++ b/style.css
@@ -75,6 +75,9 @@
     }
   
     @media (max-width: 625px) {
+      .div-details-card-info{
+        width: fit-content;
+      }
       .filter-type-order {
         flex-direction: column;
       }
